Centrage corps, bonnes couleurs, txt à revoir

--- a/index.html
+++ b/index.html
@@ -1,62 +1,76 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Site Exo Lundi 17 Mai 2016</title>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
-	</head>
+
+<head>
+    <title>Site Exo Lundi 17 Mai 2016</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+</head>
+
 <body>
-	<div id="container">
-	
-		<header>
-		</header>
 
-		<section>
-			<div id="tile1">
-				<div class="l2h2 no-m red">
-				</div>
-				
-				<div class="l1h1 bl blue">
-				</div>
+    <div id="container">
 
-				<div class="l1h1 br purple">
-				</div>
-			</div>
+        <header>
+        </header>
 
-			<div id="tile2">
-				<div class="l1h1 tl green">
-				</div>
+        <section>
 
-				<div class="l1h1 tr red">
-				</div>
+            <div id="tile1">
+                <div class="l2h2 no-m white01 pBlack">
+                    <p>Title</p>
+                </div>
 
-				<div class="l2h2 no-m blue">
-				</div>
-			</div>
+                <div class="l1h1 bl pink01 pBlack">
+                    <p>Title</p>
+                </div>
 
-			<div id="tile">
-				<div class="l2h1 yellow">
-				</div>
-				
-				<div class="l1h1 red">
-				</div>
+                <div class="l1h1 br purple01 pBlack">
+                    <p>Title</p>
+                </div>
+            </div>
 
-				<div class="l1h1 blue">
-				</div>
+            <div id="tile2">
+                <div class="l1h1 tl green01 pBlack">
+                    <p>Title</p>
+                </div>
 
-				<div class="l1h1 green">
-				</div>
+                <div class="l1h1 tr yellow01 pBlack">
+                    <p>Title</p>
+                </div>
 
-				<div class="l1h1 purple">
-				</div>
-			</div>
-		</section>
+                <div class="l2h2 no-m pink01 pBlack">
+                    <p>Title</p>
+                </div>
+            </div>
 
-		<footer>
-		</footer>
+            <div id="tile3">
+                <div class="l2h1 no-m blue01 pBlack">
+                    <p>Title</p>
+                </div>
 
-	
-	</div>
+                <div class="l1h1 tl green01 pBlack">
+                    <p>Title</p>
+                </div>
+
+                <div class="l1h1 tr purple01 pBlack">
+                    <p>Title</p>
+                </div>
+
+                <div class="l1h1 bl blue01 pBlack">
+                    <p>Title</p>
+                </div>
+
+                <div class="l1h1 br white01 pBlack">
+                    <p>Title</p>
+                </div>
+            </div>
+
+        </section>
+
+    </div>
+
 </body>
 
 </html>
