--- a/index.html
+++ b/index.html
@@ -13,57 +13,92 @@
     <div id="container">
 
         <header>
+            <h1>Divshot</h1>
+            <p>8pts</p>
         </header>
 
         <section>
 
             <div id="tile1">
-                <div class="l2h2 no-m white01 pBlack">
-                    <p>Title</p>
+                <div id="img1" class="box-large no-m white01">
+                    <div class="t-abs">
+                        <p>Leaderbord</p>
+                    </div>
+                    <div class="arrow">arrow</div>
                 </div>
 
-                <div class="l1h1 bl pink01 pBlack">
-                    <p>Title</p>
+                <div id="img2" class="box-small bl pink01">
+                    <div class="t-abs">
+                        <p>Entertainment</p>
+                    </div>
+                    <div class="arrow">arrow</div>
                 </div>
 
-                <div class="l1h1 br purple01 pBlack">
-                    <p>Title</p>
+                <div id="img3" class="box-small br purple01">
+                    <div class="t-abs">
+                        <p>Sports</p>
+                    </div>
+                    <div class="arrow">arrow</div>
                 </div>
             </div>
 
             <div id="tile2">
-                <div class="l1h1 tl green01 pBlack">
-                    <p>Title</p>
+                <div id="img4" class="box-small tl green01">
+                    <div class="t-abs">
+                        <p>Food and Drink</p>
+                    </div>
+                    <div class="arrow-black">arrow</div>
                 </div>
 
-                <div class="l1h1 tr yellow01 pBlack">
-                    <p>Title</p>
+                <div id="img5" class="box-small tr yellow01">
+                    <div class="t-abs">
+                        <p>General Knowledge</p>
+                    </div>
+                    <div class="arrow-black">arrow</div>
                 </div>
 
-                <div class="l2h2 no-m pink01 pBlack">
-                    <p>Title</p>
+                <div id="img6" class="box-large no-m pink01">
+                    <div class="t-abs">
+                        <p>Geography</p>
+                    </div>
+                    <div class="arrow">arrow</div>
                 </div>
             </div>
 
             <div id="tile3">
-                <div class="l2h1 no-m blue01 pBlack">
-                    <p>Title</p>
+                <div id="img7" class="box-medium no-m blue01">
+                    <div class="t-abs">
+                        <p>History</p>
+                    </div>
+                    <div class="arrow">arrow</div>
                 </div>
 
-                <div class="l1h1 tl green01 pBlack">
-                    <p>Title</p>
+                <div id="img8" class="box-small tl green01">
+                    <div class="t-abs">
+                        <p>Science and Nature</p>
+                    </div>
+                    <div class="arrow-black">arrow</div>
                 </div>
 
-                <div class="l1h1 tr purple01 pBlack">
-                    <p>Title</p>
+                <div id="img9" class="box-small tr purple01">
+                    <div class="t-abs">
+                        <p>TV and Movies</p>
+                    </div>
+                    <div class="arrow">arrow</div>
                 </div>
 
-                <div class="l1h1 bl blue01 pBlack">
-                    <p>Title</p>
+                <div id="img10" class="box-small bl blue01">
+                    <div class="t-abs">
+                        <p>Music</p>
+                    </div>
+                    <div class="arrow">arrow</div>
                 </div>
 
-                <div class="l1h1 br white01 pBlack">
-                    <p>Title</p>
+                <div id="img11" class="box-small br white01">
+                    <div class="t-abs">
+                        <p>Profile</p>
+                    </div>
+                    <div class="arrow">arrow</div>
                 </div>
             </div>
 
